--- a/facapedidos/application/modules/estabelecimento/views/layouts/layout.phtml
+++ b/facapedidos/application/modules/estabelecimento/views/layouts/layout.phtml
@@ -8,7 +8,7 @@ $this->headTitle()->setSeparator(' - ');
 <head>
 <meta http-equiv="content-type" content="text/html; charset=utf-8" />
 
-<?php echo $this->headMeta(); ?>
+<?php //echo $this->headMeta(); ?>
 
 <title><?php echo $this->pageTitle;?></title>
 
