--- a/whattoeat/application/modules/estabelecimento/views/scripts/empresa/index.phtml
+++ b/whattoeat/application/modules/estabelecimento/views/scripts/empresa/index.phtml
@@ -12,22 +12,22 @@
     <div id="tabs-1">
         <div class="contentForm">
             <form action="<?php echo $this->baseUrl() ?>/estabelecimento/empresa/add" method="post" class="frm" id='form1' onsubmit="return validateForm('form1');" enctype="multipart/form-data" >
-                <table class="tableFrm" cellspacing="0" cellpadding="0" border="0">
+                <table class="tableFrm tble1" cellspacing="0" cellpadding="0" border="0">
                     <tr>
-                        <td width="70%"><table class="tableFrm" cellspacing="7">
+                        <td width="100%"><table class="tableFrm " cellspacing="7">
                                 <tr>
-                                    <td> Nome * </td>
-                                    <td><input type="text" id="razao_social" class="input-medium RQR required form-control"  title='Por favor, indique Razao Social'  name="razao_social"  value="<?php echo $this->formData['razao_social'] ?>" maxlength="100"  style="width: 200px;" onchange="setaURL();">
+                                    <td class="tdwitdh"><label> Nome *</label> </td>
+                                    <td class="tdwitdh"><input type="text" id="razao_social" class="input-medium RQR required form-control"  title='Por favor, indique Razao Social'  name="razao_social"  value="<?php echo $this->formData['razao_social'] ?>" maxlength="100"  style="width: 200px;" onchange="setaURL();">
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                                 </tr>
                                 <tr>
-                                    <td> CNPJ (apenas números) *</td>
-                                    <td><input type="text" class="input-medium RQR required validNumber form-control" title="Por favor, indique um CNPJ." name="cnpj" maxlength="14" value="<?php echo $this->formData['cnpj'] ?>" style="width: 200px;">
+                                    <td class="tdwitdh"> <label>CNPJ (apenas números) *</label></td>
+                                    <td class="tdwitdh"><input type="text" class="input-medium RQR required validNumber form-control" title="Por favor, indique um CNPJ." name="cnpj" maxlength="14" value="<?php echo $this->formData['cnpj'] ?>" style="width: 200px;">
                                         <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                                 </tr>
                             </table></td>
 
-                        <td width="30%"><?php if (!empty($this->formData['logo']))
+                            <td width="100%" position="relative" class="upload logocls"><?php if (!empty($this->formData['logo']))
 { ?>
                             <span id='image'><img src="<?php echo $this->baseUrl() ?>/estabelecimento/empresa/get-Image/id/<?php echo $this->formData['cod_empresa'] ?>" width="151" height="141" alt=""></span><br>
                             <span id='changeImage' style="display: none;">
@@ -46,62 +46,87 @@
                             Logo <br><input type="file" name="userfile">
 <?php } ?></td>
                     </tr>
-                </table>                 
-                <table class="tableFrm" cellspacing="5" cellpadding="0" border="0">
+                </table>   
+                          <!----change table -->
+                
+                
+                <table class="tableFrm tble1" cellspacing="0" cellpadding="0" border="0">
                     <tr>
-                        <td colspan="2"> Email
-                            <input type="text" class="input-medium validEmail form-control" maxlength="50"  name="email" value="<?php echo $this->formData['email'] ?>" style="width: 200px;">
+                        <td width="100%"><table class="tableFrm " cellspacing="7">
+                                <tr>
+                                    <td class="tdwitdh"><label> Email *</label> </td>
+                                    <td class="tdwitdh"><input type="text" class="input-medium RQR required form-control"  title='Por favor, indique Razao Social'  name="email"  value="<?php echo $this->formData['email'] ?>" maxlength="100">
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+                                <tr>
+                                    <td class="tdwitdh"> <label>URL interna *</label></td>
+                                    <td class="tdwitdh"><input type="text" id="url" class="input-medium form-control" maxlength="50"  name="url" value="<?php echo $this->formData['url'] ?>" style="width: 200px;" disabled="true" >
+                                        <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                </tr>
+                            </table></td>
+
+
+                    </tr>
+                </table>       
+                
+                <!---- -->
+                
+                <!--table class="tableFrm frm2" cellspacing="5" cellpadding="0" border="0">
+                    <tr>
+                        <td  colspan="2"> Email</td>
+                            <td><input type="text" class="input-medium validEmail form-control" maxlength="50"  name="email" value="<?php echo $this->formData['email'] ?>" style="width: 200px;">
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>                   
-      	                         <td colspan="2"> URL interna 
-                                     <input type="text" id="url" class="input-medium form-control" maxlength="50"  name="url" value="<?php echo $this->formData['url'] ?>" style="width: 200px;" disabled="true" >
+                            <td colspan="2"> URL interna</td> 
+                            <td><input type="text" id="url" class="input-medium form-control" maxlength="50"  name="url" value="<?php echo $this->formData['url'] ?>" style="width: 200px;" disabled="true" >
                             <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
                     </tr>
 
 
-                </table>
+                </table-->
 
-                <fieldset style=" margin: 0; padding: 0;">
+                <fieldset style=" margin: 0; padding: 0;" class="empresatable">
                     <legend>Endereço:</legend>
                     <table class="tableFrm" cellspacing="8" cellpadding="0" border="0">
                         <tr>
-                            <td> Logradouro *&nbsp;&nbsp;&nbsp;<br>
-                                <input type="text" class="input-medium RQR required form-control"  title='Por favor, indique Logradouro' maxlength="50"  name="rua" value="<?php echo $this->formData['rua'] ?>" style="width: 200px;">
+                            <td> <label>Logradouro *</label>
+                                <input type="text" class="input-medium RQR required form-control"  title='Por favor, indique Logradouro' maxlength="50"  name="rua" value="<?php echo $this->formData['rua'] ?>" >
                                 <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
-                            <td> Numero *<br>
-                                <input type="text" class="input-medium RQR  required validNumber form-control"  title='Por favor, indique Numero'  name="numero" value="<?php echo $this->formData['numero'] ?>" style="width: 200px;">
+                            <td> <label>Numero *</label><br>
+                                <input type="text" class="input-medium RQR  required validNumber form-control"  title='Por favor, indique Numero'  name="numero" value="<?php echo $this->formData['numero'] ?>" >
                                 <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
-                             <td> Complemento<br>
-                                <input type="text" class="input-medium form-control"  name="complemento" maxlength="20" value="<?php echo $this->formData['complemento'] ?>" style="width: 200px;"></td>
+                                                     </tr>
+                        <tr>
+                            <td> <label>Complemento</label><br>
+                                <input type="text" class="input-medium form-control"  name="complemento" maxlength="20" value="<?php echo $this->formData['complemento'] ?>" ></td>
+
+                            <td><label> CEP (apenas números)*</label><br>
+                                <input type="text" class="input-medium RQR required validNumber form-control"  title='Por favor, indique CEP' maxlength="8"  name="cep" value="<?php echo $this->formData['cep'] ?>">
+                                <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
+                                                    </tr>
+                        <tr>
+                            <td> <label>Bairro</label>
+                                <input type="text" class="input-medium form-control" maxlength="30" name="bairro" value="<?php echo $this->formData['bairro'] ?>" ></td>
+                            <td> <label>Telefone 1</label>
+                                <input type="text" class="input-medium form-control"  name="telefone1" maxlength="20" value="<?php echo $this->formData['telefone1'] ?>"></td>
+                        </tr>
+                        <tr>
+                            <td> <label>Telefone 2</label>
+                                <input type="text" class="input-medium form-control"  name="telefone2" maxlength="20" value="<?php echo $this->formData['telefone2'] ?>"></td>
+                            <td><label> Website</label>
+                                <input type="text" class="input-medium form-control"  name="website" maxlength="50" value="<?php echo $this->formData['website'] ?>" ></td>
 
                         </tr>
                         <tr>
-                            <td> CEP (apenas números)*<br>
-                                <input type="text" class="input-medium RQR required validNumber form-control"  title='Por favor, indique CEP' maxlength="8"  name="cep" value="<?php echo $this->formData['cep'] ?>" style="width: 200px;">
-                                <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
-                                                        <td> Bairro
-                                <input type="text" class="input-medium form-control" maxlength="30" name="bairro" value="<?php echo $this->formData['bairro'] ?>" style="width: 200px;"></td>
-
-                        </tr>
-                        <tr>
-                            <td> Telefone 1
-                                <input type="text" class="input-medium form-control"  name="telefone1" maxlength="20" value="<?php echo $this->formData['telefone1'] ?>" style="width: 200px;"></td>
-                            <td> Telefone 2
-                                <input type="text" class="input-medium form-control"  name="telefone2" maxlength="20" value="<?php echo $this->formData['telefone2'] ?>" style="width: 200px;"></td>
-                            <td> Website
-                                <input type="text" class="input-medium form-control"  name="website" maxlength="50" value="<?php echo $this->formData['website'] ?>" style="width: 200px;"></td>
-
-                        </tr>
-                        <tr>
-                            <td> Cidade *
+                            <td> <label>Cidade *</label>
 <?php
-                                $attribs = array("class" => 'input-medium RQR required form-control', "title" => 'Por favor, indique Cidade', 'style' => 'width:200px');
+                                $attribs = array("class" => 'input-medium RQR required form-control', "title" => 'Por favor, indique Cidade');
                                 // echo form_dropdown('cod_cidade', $cidadeOption, $formData['cod_cidade'],$extra);
                                 echo $this->formSelect('cod_cidade', $this->formData['cod_cidade'], $attribs, $this->cidadeOption);
 ?>
                                 <div class='bodyTextSmall'> <span class='tip'></span> <span class='missing'></span></div></td>
 
-			  <td> Fuso Horário
-			    <select name="timezone" id="timezone" class="input-medium RQR required form-control" title="Por favor, indique o fuso horário" style="width:200px">
+                            <td> <label>Fuso Horário</label>
+			    <select name="timezone" id="timezone" class="input-medium RQR required form-control" title="Por favor, indique o fuso horário">
 				<option value="America/Manaus" label="America/Manaus" <?php echo ($this->formData['timezone'] == 'America/Manaus') ? "selected" : ""  ?>  >Manaus</option>
 				<option value="America/Sao_Paulo" label="America/Sao_Paulo" <?php echo ($this->formData['timezone'] == 'America/Sao_Paulo') ? "selected" : ""  ?> >Sao_Paulo</option>
 				<option value="America/Recife" label="America/Recife" <?php echo ($this->formData['timezone'] == 'America/Recife') ? "selected" : ""  ?> >Recife</option>
